# chat-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-base  LICENSE  README.md  api.http  docker-compose.yml  test.json
.github/workflows/: docker.yml
assets/: index.html  script.js
config/: local.toml  release.toml
docs/: dgraph.md  https.md  seaorm.md
entity/: Cargo.toml
entity/src/: friend_request.rs  group.rs  lib.rs  prelude.rs  read_index.rs  sea_orm_active_enums.rs  user.rs  user_group_rel.rs
https/: https.md
migration/: Cargo.toml
migration/src/: 2024-09-17.sql  create_table.rs  lib.rs  m20220101_000001_create_table.rs  m20240827_create_table.rs  m20240828_create_table.rs
msg/: Cargo.toml
msg/benches/: db.rs
msg/src/: error.rs  lib.rs  messages.rs
src/: admin.rs  app_state.rs  auth.rs  config.rs  datetime.rs  dgraph.rs  err.rs  event.rs  format.rs  friend.rs  group.rs  lib.rs  log.rs  main.rs  message.rs  middleware.rs  open_api.rs  read_index.rs  user.rs  validate.rs
src/entity/: mod.rs  prelude.rs  user.rs
src/friend/: dgraph.rs
utoipa/: Cargo.toml
utoipa/src/: main.rs
