workspace = { members = ["entity"] }
[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = "9"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
once_cell = "1.8"
validator = { version = "0.14.0", features = ["derive"] }
thiserror = "1.0.29"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
color-eyre = "0.6"
fastrand = "2.0.1"
chrono = "0.4.31"
anyhow = "1.0.79"
sea-orm = { version = "0.12.11", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print"] }
bytes = "1.5.0"
