[package]
name = "msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "1.0.0-alpha.120"
parking_lot = "0.12.1"
thiserror = "1.0.30"

[[bench]]
name = "db"
harness = false

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
tempfile = "3.2.0"