[package]
name = "utoipa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.38.1"
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "vendored"], default-features = false }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
